<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold"
            android:id="@+id/judul"
            android:text="@string/judul">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="2dp"
            android:textSize="11dp"
            android:id="@+id/tanggal"
            android:text="@string/tanggal">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/icon_fb"
                android:src="@drawable/fb">
            </ImageView>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="7dp"
                android:id="@+id/icon_twit"
                android:src="@drawable/twit">
            </ImageView>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="7dp"
                android:id="@+id/icon_wa"
                android:src="@drawable/wa">
            </ImageView>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="7dp"
                android:id="@+id/icon_yt"
                android:src="@drawable/yt">
            </ImageView>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:layout_marginTop="7dp"
            android:layout_marginHorizontal="15dp"
            android:id="@+id/gambar_virus"
            android:src="@drawable/virus">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="2dp"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:id="@+id/penulis"
            android:text="@string/penulis">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:id="@+id/artikel1"
            android:text="@string/artikel1">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:id="@+id/artikel2"
            android:text="@string/artikel2">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:id="@+id/artikel3"
            android:text="@string/artikel3">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:id="@+id/artikel4"
            android:text="@string/artikel4">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:id="@+id/artikel5"
            android:text="@string/artikel5">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="120dp"
                android:src="@drawable/fb">
            </ImageView>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="7dp"
                android:src="@drawable/twit">
            </ImageView>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="7dp"
                android:src="@drawable/wa">
            </ImageView>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="7dp"
                android:src="@drawable/yt">
            </ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:background="@color/black2">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo_kompas"
                >
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="11dp"
                android:textAlignment="center"
                android:id="@+id/footer"
                android:text="@string/footer"
                android:gravity="center_horizontal">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>